--- a/src/app/Bag/bag-form/bag-form.component.html
+++ b/src/app/Bag/bag-form/bag-form.component.html
@@ -50,7 +50,7 @@
             <app-size-bag [SizeID]="product.size_id"></app-size-bag>
             <div class="change__Bag">
               <p>Quanlity</p>
-              <p class="bold">{{ product.quality }} <a href="">Change</a></p>
+              <p class="bold">{{ product.quality }}</p>
             </div>
             <app-wishlist-bag
               [IdProduct]="product.product_id"
