--- a/src/app/Bag/bag-form/size-bag/size-bag.component.html
+++ b/src/app/Bag/bag-form/size-bag/size-bag.component.html
@@ -1,4 +1,4 @@
 <div class="change__Bag">
   <p>Size</p>
-  <p class="bold">{{SizeNumber}} US<a href="">Change</a></p>
+  <p class="bold">{{SizeNumber}} US</p>
 </div>
