--- a/src/app/WishList/wishlist-form/wishlist-form.component.html
+++ b/src/app/WishList/wishlist-form/wishlist-form.component.html
@@ -24,7 +24,7 @@
     <div
       class="all__Card"
       [class.juscontent]="JuscontentCheck"
-      *ngIf="WishListProduct.length > 0"
+      *ngIf="WishListCount > 0"
     >
       <div
         class="card__Form"
