--- a/src/app/Admin/admin-form/admin-mystore/admin-mystore.component.html
+++ b/src/app/Admin/admin-form/admin-mystore/admin-mystore.component.html
@@ -1,12 +1,12 @@
-<div class="table-data">
+<div class="table-data" *ngIf="Num < 6">
   <div class="order">
     <div class="head">
-      <h3>{{List}} List</h3>
+      <h3>{{ List }} List</h3>
       <p (click)="ChangeList(1)">Product</p>
       <p (click)="ChangeList(2)">Brand</p>
-      <p>Nsx</p>
-      <p>Category</p>
-      <p>+</p>
+      <p (click)="ChangeList(4)">Nsx</p>
+      <p (click)="ChangeList(5)">Category</p>
+      <p (click)="AddProduct()">+</p>
       <p>-</p>
       <i class="bx bx-search"></i>
       <i class="bx bx-filter"></i>
@@ -14,33 +14,100 @@
     <table>
       <thead>
         <tr>
-          <th *ngFor="let code of ListCode">{{code.list_name}}</th>
+          <th *ngFor="let code of ListCode">{{ code.list_name }}</th>
         </tr>
       </thead>
       <tbody *ngIf="Num == 1">
-        <tr *ngFor="let product of ListProduct" (click)="Router(product.product_Name,product.product_id)">
-          <td>{{product.id}}</td>
+        <tr
+          *ngFor="let product of ListProduct"
+          (click)="Router(product.product_Name, product.product_id)"
+        >
+          <td>{{ product.id }}</td>
           <td>
-            <img
-              [src]="product.image"
-            />
+            <img [src]="product.image" />
           </td>
-          <td>{{product.product_Name}}</td>
-          <td>{{product.product_Price}}</td>
-          <td>{{product.brand}}</td>
+          <td>{{ product.product_Name }}</td>
+          <td>{{ product.product_Price }}</td>
+          <td>{{ product.brand }}</td>
           <td>High-top</td>
-          <td><span class="status Active">{{product.Status}}</span></td>
+          <td>
+            <span class="status Active">{{ product.Status }}</span>
+          </td>
           <td class="See">See</td>
         </tr>
       </tbody>
       <tbody *ngIf="Num == 2">
         <tr *ngFor="let brand of ListProduct">
-          <td>{{brand.id}}</td>
-          <td>{{brand.brand_Name}}</td>
-          <td>{{brand.nsx}}</td>
-          <td><span class="status Active">{{brand.Status}}</span></td>
+          <td>{{ brand.id }}</td>
+          <td>{{ brand.brand_Name }}</td>
+          <td>{{ brand.nsx }}</td>
+          <td>
+            <span class="status Active">{{ brand.Status }}</span>
+          </td>
+        </tr>
+      </tbody>
+      <tbody *ngIf="Num == 4">
+        <tr *ngFor="let nsx of ListProduct">
+          <td>{{ nsx.id }}</td>
+          <td>{{ nsx.nsx_Name }}</td>
+          <td>
+            <span class="status Active">{{ nsx.Status }}</span>
+          </td>
+        </tr>
+      </tbody>
+      <tbody *ngIf="Num == 5">
+        <tr *ngFor="let category of ListProduct">
+          <td>{{ category.id }}</td>
+          <td>{{ category.category_Name }}</td>
+          <td>
+            <span class="status Active">{{ category.Status }}</span>
+          </td>
         </tr>
       </tbody>
     </table>
+  </div>
+</div>
+
+<div class="Head" *ngIf="Num > 5">
+  <p>Back</p>
+</div>
+<div class="Form" *ngIf="Num > 5">
+  <div class="Info">
+    <p>Name</p>
+    <input type="text" placeholder="Product Name" />
+    <p>Price</p>
+    <input type="text" placeholder="Product Name" />
+    <p>Brand</p>
+    <select>
+      <option></option>
+      <option *ngFor="let brand of ListBrand" (click)="ClickBrand(brand.brand_id)">{{brand.brand_Name}}</option>
+    </select>
+    <p>Category</p>
+    <select>
+      <option></option>
+      <option>USA</option>
+    </select>
+  </div>
+  <div class="Img">
+    <div>
+      <p>Main</p>
+      <img [src]="img.image_Product_Main" alt="" />
+      <input type="file" (change)="UploadMainImg($event)"/>
+    </div>
+    <div>
+      <p>Detail</p>
+      <img [src]="img.image_Product_Detail" alt="" />
+      <input type="file" (change)="UploadDetailImg($event)" *ngIf="img.image_Product_Detail == ''"/>
+    </div>
+    <div>
+      <p>Ass</p>
+      <img [src]="img.image_Product_Ass" alt="" />
+      <input type="file" (change)="UploadAssImg($event)" *ngIf="img.image_Product_Ass == ''"/>
+    </div>
+    <div>
+      <p>Cond</p>
+      <img [src]="img.image_Product_Cond" alt="" />
+      <input type="file" (change)="UploadCondImg($event)" *ngIf="img.image_Product_Cond == ''"/>
+    </div>
   </div>
 </div>
