--- a/src/app/need-help/need-help.component.css
+++ b/src/app/need-help/need-help.component.css
@@ -3,9 +3,10 @@
   background-color: #f5f5f5;
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
   font-size: 12px;
   width: 100%;
-  padding: 40px 35px;
+  padding: 40px 70px;
   color: #000;
 }
 .Left__NeedHelp {
