--- a/src/app/Admin/admin-form/admin-form.component.html
+++ b/src/app/Admin/admin-form/admin-form.component.html
@@ -22,28 +22,17 @@
         <span class="text">User</span>
       </a>
     </li>
-    <li  [class.active]="check[3]">
+    <li  [class.active]="check[3]" routerLink="order">
       <a>
-        <i class="bx bxs-message-dots"></i>
-        <span class="text">Message</span>
+        <i class="bx bxs-user"></i>
+        <span class="text">Order</span>
       </a>
     </li>
-    <li  [class.active]="check[4]">
-      <a>
-        <i class="bx bxs-group"></i>
-        <span class="text">Team</span>
-      </a>
-    </li>
+
   </ul>
   <ul class="side-menu">
     <li>
-      <a>
-        <i class="bx bxs-cog"></i>
-        <span class="text">Settings</span>
-      </a>
-    </li>
-    <li>
-      <a href="#" class="logout">
+      <a class="logout" style="cursor: pointer;">
         <i class="bx bxs-log-out-circle"></i>
         <span class="text" (click)="SignOut()">Logout</span>
       </a>
