--- a/src/app/Admin/admin-form/admin-login/admin-login.component.html
+++ b/src/app/Admin/admin-form/admin-login/admin-login.component.html
@@ -1,1 +1,32 @@
-<p>admin-login works!</p>
+<div class="Login__Form" [class.none]="checkForm">
+  <div class="Login__Tag">
+    <div class="Top__Login">
+      <p>Admin</p>
+      <i class='bx bx-x' (click)="ShowCloseForm()"></i>
+    </div>
+    <div class="SignInAndRegister">
+      <p>SIGN IN</p>
+    </div>
+    <div class="Input__Login__Form">
+      <div class="LoginShowForm">
+        <div class="Input__Login Email">
+          <p>Email address</p>
+          <input type="text" [(ngModel)]="User.Email" [class.border]="LoginCheck"/>
+        </div>
+        <div class="Input__Login pass">
+          <p>Password</p>
+          <input [type]="type" [(ngModel)]="User.password" [class.border]="LoginCheck">
+        </div>
+        <div class="checkbox" (click)="ShowPass()">
+          <input type="checkbox">Show password
+        </div>
+        <div class="Input__Login error"  [class.flexerror]="LoginCheck">
+          <i class='bx bx-error-circle'></i>
+          <p>Incorrect email or password</p>
+        </div>
+        <p class="ForgetPassword">Forgot your password</p>
+        <button class="Button__Login" (click)="LoginClick()">Sign In</button>
+      </div>
+    </div>
+  </div>
+</div>
