--- a/src/app/Admin/admin-form/admin-form.component.html
+++ b/src/app/Admin/admin-form/admin-form.component.html
@@ -12,7 +12,7 @@
     </li>
     <li [class.active]="check[1]" routerLink="mystore">
       <a>
-        <i class="bx bxs-shopping-bag-alt"></i>
+        <i class='bx bxs-store-alt'></i>
         <span class="text">My Store</span>
       </a>
     </li>
@@ -24,7 +24,7 @@
     </li>
     <li  [class.active]="check[3]" routerLink="order">
       <a>
-        <i class="bx bxs-user"></i>
+        <i class="bx bxs-shopping-bag-alt"></i>
         <span class="text">Order</span>
       </a>
     </li>
@@ -46,8 +46,8 @@
   <!-- NAVBAR -->
   <nav>
     <i class="bx bx-menu"></i>
-    <a href="#" class="nav-link">Categories</a>
-    <form action="#">
+    <a class="nav-link">Categories</a>
+    <form>
       <div class="form-input">
         <input type="search" placeholder="Search..." />
         <button type="submit" class="search-btn">
@@ -55,13 +55,9 @@
         </button>
       </div>
     </form>
-    <input type="checkbox" id="switch-mode" hidden />
-    <a href="#" class="notification">
-      <i class="bx bxs-bell"></i>
-      <span class="num">8</span>
-    </a>
-    <a href="#" class="profile">
-      <p>{{NameUser}}</p>
+
+    <a class="profile">
+      <p>Hi {{NameUser}}</p>
     </a>
   </nav>
   <!-- NAVBAR -->
