--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -18,8 +18,8 @@
           <p>Password</p>
           <input [type]="type" [(ngModel)]="User.password" [class.border]="LoginCheck[2]">
         </div>
-        <div class="checkbox" (click)="ShowPass()">
-          <input type="checkbox">Show password
+        <div class="checkbox">
+          <input type="checkbox" (click)="ShowPass()">Show password
         </div>
         <div class="Input__Login error"  [class.flexerror]="LoginCheck[2]">
           <i class='bx bx-error-circle'></i>
@@ -49,8 +49,8 @@
           <input [type]="type2" [(ngModel)]="UserRegister.passwordcom" [class.border]="CheckRegister[4]">
           <p class="hide" [class.border]="CheckRegister[4]">* Invalid password</p>
         </div>
-        <div class="checkbox" (click)="ShowPass2()">
-          <input type="checkbox">Show password
+        <div class="checkbox">
+          <input type="checkbox" (click)="ShowPass2()">Show password
         </div>
         <div class="Input__Login error"  [class.flexerror]="CheckRegister[0]">
           <i class='bx bx-error-circle'></i>
