--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -30,7 +30,7 @@
       </div>
       <div class="RegisterShowForm" [class.none]="LoginCheck[1]">
         <div class="Input__Login Name">
-          <p>Name</p>
+          <p>Name *Firstname and Lastname</p>
           <input type="text" [(ngModel)]="UserRegister.Name" [class.border]="CheckRegister[1]">
           <p class="hide" [class.border]="CheckRegister[1]">* Please enter a valid name</p>
         </div>
