--- a/src/app/Admin/admin-form/admin-order/admin-order.component.html
+++ b/src/app/Admin/admin-form/admin-order/admin-order.component.html
@@ -2,9 +2,9 @@
   <div class="order">
     <div class="head">
       <h3>Order List</h3>
-      <input type="text" class="search" />
-      <i class="bx bx-search"></i>
-      <i class="bx bx-filter"></i>
+      <input type="text" class="search" *ngIf="SearchCheck == true" [(ngModel)]="search"/>
+      <i class="bx bx-search" (click)="Search()"></i>
+      <i class="bx bx-filter" (click)="Sort()"></i>
     </div>
     <table>
       <thead>
