--- a/src/app/Admin/admin-form/admin-user/admin-user.component.html
+++ b/src/app/Admin/admin-form/admin-user/admin-user.component.html
@@ -2,10 +2,9 @@
   <div class="order">
     <div class="head">
       <h3>User List</h3>
-      <p>+</p>
-      <p>-</p>
-      <i class="bx bx-search"></i>
-      <i class="bx bx-filter"></i>
+      <input type="text" class="search" [(ngModel)]="search" *ngIf="SearchCheck == true"/>
+      <i class="bx bx-search" (click)="Search()"></i>
+      <i class="bx bx-filter" (click)="Sort()"></i>
     </div>
     <table>
       <thead>
