--- a/src/app/Admin/admin-form/admin-user/admin-user.component.html
+++ b/src/app/Admin/admin-form/admin-user/admin-user.component.html
@@ -22,7 +22,7 @@
           <td>{{user.address}}</td>
           <td>${{user.credit}}</td>
           <td><span class="status {{user.Status}}">{{user.Status}}</span></td>
-          <td class="See">See</td>
+          <td><i class='bx bx-pencil'></i></td>
         </tr>
       </tbody>
     </table>
